Add figure in design.tex.

--- a/assignment2/report/design.tex
+++ b/assignment2/report/design.tex
@@ -4,6 +4,8 @@
         Troels, Troels, Kasper
 }
 \date{\today}
+
+\usepackage{graphicx}
  
 \title{Design}
  
@@ -325,6 +327,16 @@ no good solution really exist for this problem no matter what system
 is used. It would seem to the user as either the old or the new list
 of old versions of the two files would seem to have disappeared or
 multiple/merged lists would have to be displayed.
+
+See figure \ref{structurefig}.
+
+\begin{figure}
+\begin{center}
+\includegraphics[height=150mm]{filestructure.png}
+\end{center}
+\caption{Example of logical versus physical file structure}
+\label{structurefig}
+\end{figure}
 
 \section{Delta compression}
 
