--- a/assignment2/report/summary.tex
+++ b/assignment2/report/summary.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
  
 \author{
-        Troels, Troels, Kasper
+        Troels Henriksen, Troels Visti Thrane, Kasper Middelboe Petersen
 }
 \date{\today}
  
